--- a/tsconfig.main.json
+++ b/tsconfig.main.json
@@ -3,12 +3,12 @@
   "compilerOptions": {
     "composite": true,
     "rootDir": "src/main",
-    "outDir": "out/dist/main",
+    "outDir": "out/dist/main"
   },
   "include": [
     "src/main/**/*.ts",
     "src/main/**/*.cts",
     "src/main/**/*.mts",
-    "forge.env.d.mts",
+    "forge.env.d.mts"
   ]
 }
