--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "@electron-forge/maker-zip": "^7.4.0",
     "@electron-forge/plugin-vite": "^7.4.0",
     "@electron-forge/shared-types": "^7.4.0",
+    "@eslint/js": "^8.57.0",
     "@types/node": "^20.12.8",
     "electron": "^30.0.2",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-simple-import-sort": "^12.1.0",
     "prettier": "3.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
+    "typescript-eslint": "^7.8.0",
     "vite": "^5.2.11"
   },
   "resolutions": {
