--- a/package.json
+++ b/package.json
@@ -11,11 +11,18 @@
     "@electron-forge/shared-types": "^7.4.0",
     "@eslint/js": "^8.57.0",
     "@types/node": "^20.12.8",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "@vitejs/plugin-react": "^4.2.1",
     "electron": "^30.0.2",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.6",
     "eslint-plugin-simple-import-sort": "^12.1.0",
     "prettier": "3.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.8.0",
