--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prettier": "3.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.8.0",
