--- a/package.json
+++ b/package.json
@@ -1,9 +1,18 @@
 {
   "name": "mytfgames",
+  "productName": "My TFGames",
   "version": "0.0.1",
   "packageManager": "yarn@4.1.1",
   "private": true,
   "main": ".vite/build/main.mjs",
+  "scripts": {
+    "forge:make": "electron-forge make",
+    "forge:package": "electron-forge package",
+    "lint": "eslint .",
+    "lint+fix": "eslint . --fix",
+    "start": "electron-forge start",
+    "test": "vitest"
+  },
   "devDependencies": {
     "@electron-forge/cli": "^7.4.0",
     "@electron-forge/maker-zip": "^7.4.0",
@@ -20,14 +29,18 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.6",
     "eslint-plugin-simple-import-sort": "^12.1.0",
+    "inversify": "^6.0.2",
     "prettier": "3.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.0",
+    "reflect-metadata": "^0.2.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.8.0",
-    "vite": "^5.2.11"
+    "vite": "^5.2.11",
+    "vite-tsconfig-paths": "^4.3.2",
+    "vitest": "^1.6.0"
   },
   "resolutions": {
     "@electron-forge/core-utils@npm:7.4.0": "patch:@electron-forge/core-utils@npm%3A7.4.0#~/.yarn/patches/@electron-forge-core-utils-npm-7.4.0-881d5c9e73.patch",
