--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,8 @@
 {
+  "extends": "./tsconfig.base.json",
+  "compilerOptions": {
+    "experimentalDecorators": true
+  },
   "include": [],
   "files": [],
   "references": [
@@ -13,6 +17,9 @@
     },
     {
       "path": "./tsconfig.tools.json"
+    },
+    {
+      "path": "./tsconfig.worker.json"
     }
   ]
 }
