feat: Remove usage of `file://` protocol
WebApps behave differently when loaded via `file://` vs. the local dev-
server. Furthermore `file://` based apps _have_ to use a hash based
routing mechanism.

Since we no longer use the `file://` protocol we can disable its extra-
priviliges via an electron fuse.

--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   "devDependencies": {
     "@electron-forge/cli": "^7.4.0",
     "@electron-forge/maker-zip": "^7.4.0",
+    "@electron-forge/plugin-fuses": "^7.4.0",
     "@electron-forge/plugin-vite": "^7.4.0",
     "@electron-forge/shared-types": "^7.4.0",
+    "@electron/fuses": "^1.8.0",
     "@eslint/js": "^8.57.0",
     "@types/node": "^20.12.8",
     "@types/react": "^18",
