--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
   },
   "typescript.tsdk": ".yarn/sdks/typescript/lib",
   "typescript.enablePromptUseWorkspaceTsdk": true,
+  "typescript.tsserver.experimental.useVsCodeWatcher": false,
   "prettier.prettierPath": ".yarn/sdks/prettier/index.cjs",
   "eslint.nodePath": ".yarn/sdks",
   "[html]": {
