--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint .",
     "lint+fix": "eslint . --fix",
     "start": "electron-forge start",
-    "test": "vitest"
+    "test": "vitest --typecheck"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.4.0",
@@ -21,6 +21,7 @@
     "@electron-forge/shared-types": "^7.4.0",
     "@electron/fuses": "^1.8.0",
     "@eslint/js": "^8.57.0",
+    "@reduxjs/toolkit": "^2.2.5",
     "@types/node": "^20.12.8",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -35,6 +36,7 @@
     "prettier": "3.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
     "reflect-metadata": "^0.2.2",
     "ts-node": "^10.9.2",
