--- a/tsconfig.worker.json
+++ b/tsconfig.worker.json
@@ -7,5 +7,5 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": false
   },
-  "include": ["src/worker"]
+  "include": ["src/worker/**/*.mts"]
 }
