--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "test": "vitest --typecheck"
   },
   "devDependencies": {
+    "@carbon/colors": "^11.22.0",
+    "@carbon/grid": "^11.23.0",
+    "@carbon/icons-react": "^11.42.0",
+    "@carbon/react": "^1.58.0",
+    "@carbon/styles": "^1.58.0",
     "@electron-forge/cli": "^7.4.0",
     "@electron-forge/maker-zip": "^7.4.0",
     "@electron-forge/plugin-fuses": "^7.4.0",
@@ -21,12 +26,13 @@
     "@electron-forge/shared-types": "^7.4.0",
     "@electron/fuses": "^1.8.0",
     "@eslint/js": "^8.57.0",
+    "@ibm/plex": "^6.4.1",
     "@reduxjs/toolkit": "^2.2.5",
     "@types/node": "^20.12.8",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@vitejs/plugin-react": "^4.2.1",
-    "electron": "^30.0.2",
+    "electron": "^30.0.7",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react-hooks": "^4.6.2",
@@ -37,14 +43,15 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.23.0",
     "reflect-metadata": "^0.2.2",
+    "sass": "^1.77.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.9.0",
     "vite": "^5.2.11",
     "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "^1.6.0"
+    "vitest": "^1.6.0",
+    "wouter": "^3.1.3"
   },
   "resolutions": {
     "@electron-forge/core-utils@npm:7.4.0": "patch:@electron-forge/core-utils@npm%3A7.4.0#~/.yarn/patches/@electron-forge-core-utils-npm-7.4.0-881d5c9e73.patch",
