--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "start": "electron-forge start",
     "test": "vitest --typecheck"
   },
+  "peerDependencies": {
+    "@reduxjs/toolkit": "^2.2.5"
+  },
   "devDependencies": {
     "@carbon/colors": "^11.22.0",
     "@carbon/grid": "^11.23.0",
@@ -32,6 +35,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@vitejs/plugin-react": "^4.2.1",
+    "cheerio": "^1.0.0-rc.12",
     "electron": "^30.0.7",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
