--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,11 @@
 {
   "search.exclude": {
     "**/.yarn": true,
-    "**/.pnp.*": true
+    "**/.pnp.*": true,
+    "**/node_modules": true
   },
-  "typescript.tsdk": ".yarn/sdks/typescript/lib",
   "typescript.enablePromptUseWorkspaceTsdk": true,
-  "typescript.tsserver.experimental.useVsCodeWatcher": false,
-  "prettier.prettierPath": ".yarn/sdks/prettier/index.cjs",
+  "typescript.tsserver.experimental.useVsCodeWatcher": true,
   "eslint.nodePath": ".yarn/sdks",
   "[html]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
