--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@vitejs/plugin-react": "^4.2.1",
+    "ajv": "^8.14.0",
     "cheerio": "^1.0.0-rc.12",
     "electron": "^30.0.7",
     "eslint": "^8.57.0",
@@ -46,6 +47,7 @@
     "react-redux": "^9.1.2",
     "reflect-metadata": "^0.2.2",
     "sass": "^1.77.2",
+    "smol-toml": "^1.2.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.9.0",
