--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "reflect-metadata": "^0.2.2",
+    "remeda": "^2.0.0",
     "sass": "^1.77.2",
     "smol-toml": "^1.2.0",
     "ts-node": "^10.9.2",
