--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "remeda": "^2.0.0",
     "sass": "^1.77.2",
     "smol-toml": "^1.2.0",
+    "temporal-polyfill": "^0.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.9.0",
