--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ajv": "^8.14.0",
     "cheerio": "^1.0.0-rc.12",
     "electron": "^30.0.7",
+    "electron-devtools-installer": "^3.2.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react-hooks": "^4.6.2",
