feat: Temporarily integrate bunyan as a logger
This is a temporary integration of bunyan as a logger. The logger isn't
a really good fit for the project, but it's better than nothing. I will
probably replace it with `pino` if I find the time to work out the
bundler issues.

--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
     "@ibm/plex": "^6.4.1",
     "@reduxjs/toolkit": "^2.2.5",
     "@types/better-sqlite3": "^7.6.10",
+    "@types/bunyan": "^1",
     "@types/node": "^20.12.8",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^9",
     "@vitejs/plugin-react": "^4.2.1",
     "ajv": "^8.14.0",
+    "bunyan": "^1.8.15",
     "cheerio": "^1.0.0-rc.12",
     "electron": "^30.0.7",
     "electron-devtools-installer": "^3.2.0",
