--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "@vitejs/plugin-react": "^4.2.1",
     "ajv": "^8.14.0",
     "bunyan": "^1.8.15",
-    "cheerio": "^1.0.0-rc.12",
+    "cheerio": "^1.0.0",
+    "domelementtype": "^2.3.0",
+    "domhandler": "^5.0.3",
     "electron": "^30.0.7",
     "electron-devtools-installer": "^3.2.0",
     "eslint": "^8.57.0",
