--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "react-redux": "^9.1.2",
     "reflect-metadata": "^0.2.2",
     "remeda": "^2.11.0",
-    "sass": "^1.77.2",
+    "sass": "1.77.6",
     "smol-toml": "^1.3.0",
     "temporal-polyfill": "^0.2.5",
     "ts-node": "^10.9.2",
