--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "vitest --typecheck"
   },
   "dependencies": {
-    "better-sqlite3": "^10.0.0"
+    "better-sqlite3": "^11.2.1"
   },
   "devDependencies": {
     "@carbon/colors": "^11.23.1",
@@ -32,9 +32,9 @@
     "@eslint/js": "^8.57.0",
     "@ibm/plex": "^6.4.1",
     "@reduxjs/toolkit": "^2.2.5",
-    "@types/better-sqlite3": "^7.6.10",
+    "@types/better-sqlite3": "^7.6.11",
     "@types/bunyan": "^1",
-    "@types/node": "^20.12.8",
+    "@types/node": "~20.16.1",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
@@ -44,7 +44,7 @@
     "cheerio": "^1.0.0",
     "domelementtype": "^2.3.0",
     "domhandler": "^5.0.3",
-    "electron": "^30.0.7",
+    "electron": "^32.0.1",
     "electron-devtools-installer": "^3.2.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
