--- a/tsconfig.preload.json
+++ b/tsconfig.preload.json
@@ -6,7 +6,8 @@
     "rootDir": "src",
     "outDir": "out/dist/preload",
     "module": "ESNext",
-    "moduleResolution": "bundler"
+    "moduleResolution": "bundler",
+    "lib": ["ES2023", "DOM", "DOM.Iterable"]
   },
   "include": ["src/preload.ts", "forge.env.d.mts"]
 }
