--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "productName": "My TFGames",
   "license": "AGPL-3.0-or-later",
   "version": "0.0.1",
-  "packageManager": "yarn@4.2.2",
+  "packageManager": "yarn@4.4.0+sha512.91d93b445d9284e7ed52931369bc89a663414e5582d00eea45c67ddc459a2582919eece27c412d6ffd1bd0793ff35399381cb229326b961798ce4f4cc60ddfdb",
   "private": true,
   "main": ".vite/build/main.mjs",
   "scripts": {
+    "compile:check": "tsc -b tsconfig.main.json tsconfig.renderer.json tsconfig.worker.json tsconfig.preload.json tsconfig.tools.json",
     "forge:make": "electron-forge make",
     "forge:package": "electron-forge package",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "lint": "eslint .",
     "lint+fix": "eslint . --fix",
     "start": "electron-forge start",
