--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@electron-forge/plugin-vite": "^7.4.0",
     "@electron-forge/shared-types": "^7.4.0",
     "@electron/fuses": "^1.8.0",
-    "@eslint/js": "^8.57.0",
+    "@eslint/js": "^9.9.1",
     "@ibm/plex": "^6.4.1",
     "@reduxjs/toolkit": "^2.2.7",
     "@types/better-sqlite3": "^7.6.11",
@@ -49,9 +49,9 @@
     "domhandler": "^5.0.3",
     "electron": "^32.0.1",
     "electron-devtools-installer": "^3.2.0",
-    "eslint": "^8.57.0",
+    "eslint": "^9.9.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-hooks": "5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "inversify": "^6.0.2",
