--- a/.gitlab/Dockerfile
+++ b/.gitlab/Dockerfile
@@ -1,5 +1,5 @@
 # syntax=docker/dockerfile:1
-FROM node:20.16-alpine
+FROM node:20.16-alpine3.19
 
 RUN apk add --no-cache git python3
 RUN corepack enable yarn
