ci: Add `make` to the ci-image
`make` is used by `electron-forge` / `electron-rebuild`.

--- a/.gitlab/Dockerfile
+++ b/.gitlab/Dockerfile
@@ -1,5 +1,8 @@
 # syntax=docker/dockerfile:1
 FROM node:20.16-alpine3.19
 
-RUN apk add --no-cache git python3
+RUN apk add --no-cache \
+    git \
+    make \
+    python3
 RUN corepack enable yarn
