--- a/.gitlab/Dockerfile
+++ b/.gitlab/Dockerfile
@@ -1,8 +1,9 @@
 # syntax=docker/dockerfile:1
-FROM node:20.16-alpine3.19
+FROM node:20.16-slim
 
-RUN apk add --no-cache \
+RUN apt-get -qq update && apt-get -qq install \
     git \
-    make \
-    python3
+    python3 \
+    zip \
+    && rm -rf /var/lib/apt/lists/*
 RUN corepack enable yarn
