--- a/tsconfig.tools.json
+++ b/tsconfig.tools.json
@@ -4,16 +4,6 @@
     "composite": true,
     "noEmit": true
   },
-  "include": [
-    "*.ts",
-    "*.cts",
-    "*.mts",
-    "package.json",
-    "tools/vitest.config.main.mts",
-    "tools/vite.config.renderer.mts",
-    "tools/vite.config.preload.mts",
-    "tools/vite.config.main.mts",
-    "tools/vite.base.config.mts"
-  ],
+  "include": ["*.ts", "*.cts", "*.mts", "package.json", "tools/**/*.mts"],
   "exclude": ["src/**/*"]
 }
