refactor: Move the database typings to a library
We need the database typings in the worker thread for importing a
directory of game files.

--- a/src/main/tsconfig.json
+++ b/src/main/tsconfig.json
@@ -9,7 +9,8 @@
     "emitDecoratorMetadata": false,
     "paths": {
       "$ipc/*": ["../ipc/*/index.mts"],
-      "$node-libs/utils": ["../node-libs/utils/index.mts"],
+      "$node-libs/*": ["../node-libs/*/index.mts"],
+      "$node-libs/*/module": ["../node-libs/*/module.mts"],
       "$main/*": ["./*/index.mts"]
     }
   },
@@ -17,6 +18,9 @@
   "references": [
     {
       "path": "../ipc/tsconfig.json"
+    },
+    {
+      "path": "../node-libs/database/tsconfig.json"
     },
     {
       "path": "../node-libs/utils/tsconfig.json"
