ci: Update CI docker image to node version 20.17.0

--- a/.gitlab/.gitlab-ci.yml
+++ b/.gitlab/.gitlab-ci.yml
@@ -6,7 +6,8 @@ variables:
   ELECTRON_CACHE: "$CI_PROJECT_DIR/.cache/electron"
   YARN_CACHE_FOLDER: "$CI_PROJECT_DIR/.cache/yarn"
 
-image: $CI_REGISTRY_IMAGE/ci-linux:latest
+# the ggcr.io registry is borked, so we use ghcr.io
+image: ghcr.io/iov9x/mytfgames/ci-linux:latest
 
 default:
   interruptible: true
