build: Add vite config for worker

--- a/src/worker/tsconfig.worker.json
+++ b/src/worker/tsconfig.worker.json
@@ -6,5 +6,6 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": false
   },
-  "include": ["./**/*.mts"]
+  "include": ["./**/*.mts"],
+  "exclude": ["vite.config.mts"]
 }
