build: Rename node-libs to node-base and move to libs
Adopt this new layout which does not require to add a new tsconfig per
library module. Move to the `libs` folder in order to make room for a
`pure-base` library which relies only on standard ES.

Hopefully this will be the last major directory restructuring.

--- a/src/libs/node-base/tsconfig.node-base.json
+++ b/src/libs/node-base/tsconfig.node-base.json
@@ -2,12 +2,15 @@
   "extends": "../../../tsconfig.base.json",
   "compilerOptions": {
     "composite": true,
-    "outDir": "../../../out/dist/libs-node-utils",
+    "outDir": "../../../out/dist/libs-node-base",
     "module": "ESNext",
     "moduleResolution": "bundler",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": false,
-    "paths": {}
+    "paths": {
+      "$node-base/*": ["./*/index.mts"]
+    }
   },
-  "include": ["./**/*.mts"]
+  "include": ["./**/*.mts"],
+  "exclude": ["vitest.config.mts"]
 }
