build: Move ipc code into libs
Move the shared ipc infrastructure to a new library called `pure-base`
which is shared between all modules (whence `pure` EcmaScript). Move the
actual ipc definitions into their own library.

--- a/src/libs/pure-base/tsconfig.pure-base.json
+++ b/src/libs/pure-base/tsconfig.pure-base.json
@@ -1,15 +1,16 @@
 {
-  "extends": "../../tsconfig.base.json",
+  "extends": "../../../tsconfig.base.json",
   "compilerOptions": {
     "composite": true,
-    "outDir": "../../out/dist/ipc",
+    "outDir": "../../../out/dist/libs-pure-base",
     "module": "ESNext",
     "moduleResolution": "bundler",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": false,
     "paths": {
-      "$ipc/core": ["./core/index.mjs"]
+      "$pure-base/*": ["./*/index.mts"]
     }
   },
-  "include": ["./**/*.mts"]
+  "include": ["./**/*.mts"],
+  "exclude": ["vitest.config.mts"]
 }
