--- a/src/libs/ipc-main-renderer/tsconfig.ipc-main-renderer.json
+++ b/src/libs/ipc-main-renderer/tsconfig.ipc-main-renderer.json
@@ -2,14 +2,13 @@
   "extends": "../../../tsconfig.base.json",
   "compilerOptions": {
     "composite": true,
-    "outDir": "../../../out/dist/libs-node-base",
+    "outDir": "../../../out/dist/ipc-main-renderer",
     "module": "ESNext",
     "moduleResolution": "bundler",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": false,
     "paths": {
-      "$node-base/*": ["./*/index.mts"],
-      "$pure-base/*": ["./*/index.mts"]
+      "$pure-base/ipc": ["../pure-base/ipc/index.mjs"]
     }
   },
   "include": ["./**/*.mts"],
