--- a/src/worker/tsconfig.worker.json
+++ b/src/worker/tsconfig.worker.json
@@ -4,8 +4,24 @@
     "composite": true,
     "outDir": "../../out/dist/worker",
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": false
+    "emitDecoratorMetadata": false,
+    "paths": {
+      "$ipc/worker-main": ["../libs/ipc-worker-main/index.mts"],
+      "$node-base/*": ["../libs/node-base/*/index.mts"],
+      "$pure-base/*": ["../libs/pure-base/*/index.mts"]
+    }
   },
   "include": ["./**/*.mts"],
-  "exclude": ["vite.config.mts"]
+  "exclude": ["vite.config.mts"],
+  "references": [
+    {
+      "path": "../libs/ipc-worker-main/tsconfig.ipc-worker-main.json"
+    },
+    {
+      "path": "../libs/node-base/tsconfig.node-base.json"
+    },
+    {
+      "path": "../libs/pure-base/tsconfig.pure-base.json"
+    }
+  ]
 }
