--- a/src/worker/tsconfig.worker.json
+++ b/src/worker/tsconfig.worker.json
@@ -7,7 +7,7 @@
     "emitDecoratorMetadata": false,
     "paths": {
       "$ipc/worker-main": ["../libs/ipc-worker-main/index.mts"],
-      "$node-base/*": ["../libs/node-base/*/index.mts"],
+      "$node-base/*": ["../libs/node-base/*/index.mts", "../libs/node-base/*"],
       "$pure-base/*": ["../libs/pure-base/*/index.mts"]
     }
   },
