build: Add `@napi-rs/blake-hash` version 1.4.3
We will use `@napi-rs/blake-hash` to hash files within our content-
addressable storage system.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test": "vitest --typecheck"
   },
   "dependencies": {
+    "@napi-rs/blake-hash": "^1.3.4",
     "better-sqlite3": "^11.3.0"
   },
   "devDependencies": {
