--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "ES2022",
     "lib": ["ES2023"],
+    "types": ["vite/client"],
     "module": "node16",
     "moduleResolution": "node16",
     "resolveJsonModule": true,
