--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "@carbon/icons-react": "^11.50.1",
     "@carbon/react": "^1.67.1",
     "@carbon/styles": "^1.66.1",
-    "@electron-forge/cli": "^7.4.0",
-    "@electron-forge/maker-zip": "^7.4.0",
-    "@electron-forge/plugin-fuses": "^7.4.0",
-    "@electron-forge/plugin-vite": "^7.4.0",
-    "@electron-forge/shared-types": "^7.4.0",
+    "@electron-forge/cli": "~7.4.0",
+    "@electron-forge/maker-zip": "~7.4.0",
+    "@electron-forge/plugin-fuses": "~7.4.0",
+    "@electron-forge/plugin-vite": "~7.4.0",
+    "@electron-forge/shared-types": "~7.4.0",
     "@electron/fuses": "^1.8.0",
     "@eslint/js": "^9.11.1",
     "@ibm/plex": "^6.4.1",
