--- a/package.json
+++ b/package.json
@@ -17,10 +17,6 @@
     "start": "electron-forge start",
     "test": "vitest --typecheck"
   },
-  "dependencies": {
-    "@napi-rs/blake-hash": "^1.3.4",
-    "better-sqlite3": "^11.5.0"
-  },
   "devDependencies": {
     "@carbon/colors": "^11.28.0",
     "@carbon/grid": "^11.29.0",
@@ -35,6 +31,7 @@
     "@electron/fuses": "^1.8.0",
     "@eslint/js": "^9.13.0",
     "@ibm/plex": "^6.4.1",
+    "@napi-rs/blake-hash": "^1.3.4",
     "@reduxjs/toolkit": "^2.3.0",
     "@types/better-sqlite3": "^7.6.11",
     "@types/bunyan": "^1.8.11",
@@ -44,6 +41,7 @@
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.3.3",
     "ajv": "^8.17.1",
+    "better-sqlite3": "^11.5.0",
     "bunyan": "^1.8.15",
     "cheerio": "^1.0.0",
     "domelementtype": "^2.3.0",
