--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -12,6 +12,7 @@
     "sourceMap": true,
     "declaration": true,
     "strict": true,
+    "strictBuiltinIteratorReturn": true,
     "skipLibCheck": true,
     "allowUnreachableCode": false,
     "exactOptionalPropertyTypes": true,
@@ -20,6 +21,7 @@
     "noImplicitReturns": true,
     "noPropertyAccessFromIndexSignature": true,
     "noUncheckedIndexedAccess": true,
+    "noUncheckedSideEffectImports": true,
     "forceConsistentCasingInFileNames": true,
     // these are covered by eslint
     "noUnusedLocals": false,
