build: Fix module resolution for worker tsconfig

--- a/src/worker/tsconfig.worker.json
+++ b/src/worker/tsconfig.worker.json
@@ -3,6 +3,8 @@
   "compilerOptions": {
     "composite": true,
     "outDir": "../../out/dist/worker",
+    "module": "ESNext",
+    "moduleResolution": "bundler",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": false,
     "paths": {
