ci: Increase Dependabot PR limit to 10

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,6 +9,7 @@ updates:
     schedule:
       day: friday
       interval: weekly
+    open-pull-requests-limit: 10
     versioning-strategy: increase
     commit-message:
       prefix: "build(deps)"
