--- a/package.json
+++ b/package.json
@@ -68,9 +68,12 @@
     "typescript": "~5.6.3",
     "typescript-eslint": "^8.16.0",
     "uuid": "^11.0.3",
-    "vite": "^6.0.1",
-    "vite-tsconfig-paths": "^5.1.3",
-    "vitest": "^2.1.6",
+    "vite": "^6.0.6",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^2.1.8",
     "wouter": "^3.3.5"
+  },
+  "resolutions": {
+    "vite": "6.0.6"
   }
 }
