build: Split runtime and dev dependency specification
Since `electron-forge@7.5.0` the `package.json#dependencies` aren't
specially treated in any way. The split allows us to keep a better
overview over why we depend on certain things.

--- a/package.json
+++ b/package.json
@@ -17,12 +17,34 @@
     "start": "electron-forge start",
     "test": "vitest --typecheck"
   },
-  "devDependencies": {
+  "dependencies": {
     "@carbon/colors": "^11.28.0",
     "@carbon/grid": "^11.30.0",
     "@carbon/icons-react": "^11.53.0",
     "@carbon/react": "^1.74.0",
     "@carbon/styles": "^1.73.0",
+    "@ibm/plex": "^6.4.1",
+    "@reduxjs/toolkit": "^2.5.0",
+    "ajv": "^8.17.1",
+    "better-sqlite3": "^11.8.0",
+    "bunyan": "^1.8.15",
+    "cheerio": "^1.0.0",
+    "domelementtype": "^2.3.0",
+    "domhandler": "^5.0.3",
+    "electron-devtools-installer": "^4.0.0",
+    "inversify": "^6.2.1",
+    "kysely": "^0.27.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
+    "reflect-metadata": "^0.2.2",
+    "remeda": "^2.19.1",
+    "smol-toml": "^1.3.1",
+    "temporal-polyfill": "^0.2.5",
+    "uuid": "^11.0.5",
+    "wouter": "^3.3.5"
+  },
+  "devDependencies": {
     "@electron-forge/cli": "~7.6.0",
     "@electron-forge/maker-zip": "~7.6.0",
     "@electron-forge/plugin-fuses": "~7.6.0",
@@ -30,9 +52,7 @@
     "@electron-forge/shared-types": "~7.6.0",
     "@electron/fuses": "^1.8.0",
     "@eslint/js": "^9.18.0",
-    "@ibm/plex": "^6.4.1",
     "@napi-rs/blake-hash": "^1.3.4",
-    "@reduxjs/toolkit": "^2.5.0",
     "@types/better-sqlite3": "^7.6.12",
     "@types/bunyan": "^1.8.11",
     "@types/node": "^20.17.14",
@@ -40,37 +60,19 @@
     "@types/react-dom": "^18.3.5",
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.3.4",
-    "ajv": "^8.17.1",
-    "better-sqlite3": "^11.8.0",
-    "bunyan": "^1.8.15",
-    "cheerio": "^1.0.0",
-    "domelementtype": "^2.3.0",
-    "domhandler": "^5.0.3",
     "electron": "^33.3.1",
-    "electron-devtools-installer": "^4.0.0",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "inversify": "^6.2.1",
-    "kysely": "^0.27.5",
     "prettier": "3.4.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-redux": "^9.2.0",
-    "reflect-metadata": "^0.2.2",
-    "remeda": "^2.19.1",
     "sass": "1.77.6",
-    "smol-toml": "^1.3.1",
-    "temporal-polyfill": "^0.2.5",
     "ts-node": "^10.9.2",
     "typescript": "~5.7.3",
     "typescript-eslint": "^8.20.0",
-    "uuid": "^11.0.5",
     "vite": "^6.0.7",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.0.1",
-    "wouter": "^3.3.5"
+    "vitest": "^3.0.1"
   }
 }
