--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "reflect-metadata": "^0.2.2",
+    "remarkable": "^2.0.1",
     "remeda": "^2.19.1",
     "smol-toml": "^1.3.1",
     "temporal-polyfill": "^0.2.5",
@@ -60,6 +61,7 @@
     "@types/node": "^20.17.14",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@types/remarkable": "^2.0.8",
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.3.4",
     "electron": "^33.3.1",
