--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cheerio": "^1.0.0",
     "domelementtype": "^2.3.0",
     "domhandler": "^5.0.3",
+    "dompurify": "^3.2.3",
     "electron-devtools-installer": "^4.0.0",
     "gray-matter": "patch:gray-matter@npm%3A4.0.3#~/.yarn/patches/gray-matter-npm-4.0.3-852ae4f34c.patch",
     "inversify": "^6.2.1",
