--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@carbon/icons-react": "^11.53.0",
     "@carbon/react": "^1.74.0",
     "@carbon/styles": "^1.73.0",
-    "@ibm/plex": "^6.4.1",
     "@reduxjs/toolkit": "^2.5.0",
     "ajv": "^8.17.1",
     "better-sqlite3": "^11.8.0",
@@ -74,5 +73,8 @@
     "vite": "^6.0.7",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.0.1"
+  },
+  "resolutions": {
+    "@ibm/plex": "npm:empty-npm-package@1.0.0"
   }
 }
