--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dompurify": "^3.2.3",
     "electron-devtools-installer": "^4.0.0",
     "gray-matter": "patch:gray-matter@npm%3A4.0.3#~/.yarn/patches/gray-matter-npm-4.0.3-852ae4f34c.patch",
+    "immer": "^10.1.1",
     "inversify": "^6.2.1",
     "js-yaml": "^4.1.0",
     "kysely": "^0.27.5",
