--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "inversify": "^6.2.2",
     "js-yaml": "^4.1.0",
     "kysely": "^0.27.5",
+    "mime": "^4.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
